[package]
name = "bad-apple-uxn"
version = "1.0.1"
authors = ["Karol Belina <karolbelina@gmail.com>"]
edition = "2018"
description = "Bad Apple!! for the Uxn stack-machine"
readme = "README.md"
repository = "https://github.com/karolbelina/bad-apple-uxn"
license = "MIT"

[dependencies]
anyhow = "1.0"
ffmpeg-next = "4.4"
image = "0.23"
indicatif = "0.16"
itertools = "0.10"
structopt = "0.3"
textwrap = "0.14"
