[package]
name = "bad-apple-uxn"
version = "1.0.2"
authors = ["Karol Belina <karolbelina@gmail.com>"]
edition = "2018"
description = "Bad Apple!! for the Uxn stack-machine"
readme = "README.md"
repository = "https://github.com/karolbelina/bad-apple-uxn"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
ffmpeg-next = "5.1"
image = "0.24"
indicatif = "0.17"
itertools = "0.10"
textwrap = "0.15"
